2006-05-03  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.c (initcups): IPP finishings.

	* cupsconnection.c (Connection_getPrinterAttributes): Multi-valued
	network default options should appear as lists.

2006-04-21  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_addPrinterOptionDefault): Support
	lists as values.

2006-04-19  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.8.

2006-04-19  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.c (initcups): String constants from adminutil.h.

	* cupsconnection.c (Connection_addPrinterOptionDefault): Handle
	different types for the value.
	(Connection_adminGetServerSettings): Implemented.
	(Connection_adminSetServerSettings): Implemented.

2006-04-15  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.7.

2006-04-15  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPrinterAttributes): Fetch all of
	the printer attributes, not just a named selection.
	(Connection_deletePrinterOptionDefault): Implemented.

2006-04-14  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Dest_new): cups.Dest type.
	(Connection_getDests): Use cups.Dest type.
	(Dest_getName): New method.
	(Dest_getInstance): New method.

2006-04-13  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_setPrinterOptionDefault):
	Implemented.
	(Connection_getDests): Implemented.

2006-04-07  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_init): Allow threads during
	httpConnectEncrypt().

2006-04-04  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.6.

2006-04-03  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPPD): Better exception when
	cupsGetPPD2() fails.

2006-03-28  Tim Waugh  <twaugh@redhat.com>

	* cupsppd.c, cupsppd.h, cupsmodule.c: Added Attribute object,
	  and PPD.attributes attribute.
	  (PPD_findAttr): Implemented.
	  (PPD_findNextAttr): Implemented.

2006-03-24  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.5.
