@@ -1,3 +1,8 @@
+2006-05-04  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsconnection.c (Connection_getPrinterAttributes): Make
+	'requesting-user-name-*' attributes lists.
+
 2006-05-03  Tim Waugh  <twaugh@redhat.com>
 
 	* cupsmodule.c (initcups): IPP finishings.
